# pocketcompare

./: LICENSE  README.md  find_pocket_residues.py  pyproject.toml
examples/: homolog_example.py  mutant_example.py
pocketcompare/: __init__.py  cli.py  compare.py  fetch.py  test.sh
tests/: conftest.py  test_cli.py  test_compare_unit.py  test_fetch_unit.py  test_integration.py
